@@ -182,6 +182,8 @@ PIG-1696: Performance: Use System.arraycopy() instead of manually copying the by
 
 BUG FIXES
 
+PIG-2078: POProject.getNext(DataBag) does not handle null (daijy)
+
 PIG-2029: Inconsistency in Pig Stats reports (rding)
 
 PIG-2071: casting numeric type to chararray during schema merge for union
